ch03: add toggle buttons; style: hide background.webp when printing.

--- a/engineering_notebook/settings/style.css
+++ b/engineering_notebook/settings/style.css
@@ -350,6 +350,7 @@ body.hide-other-elements .footer {
     .sheet {
         margin: 0;
         box-shadow: none;
+        background-image: none !important;
     }
 
     .page-number,
