move toggle-buttons into separate js; apply centralized style to ch04.

--- a/engineering_notebook/settings/style.css
+++ b/engineering_notebook/settings/style.css
@@ -31,6 +31,17 @@
     --chapter-marker-top: 85mm; /* 56mm + 29mm */
 }
 
+.theme-purple {
+    --primary-color: #8E44AD;
+    --secondary-color: #9B59B6;
+    --tertiary-color: #9B59B6;
+    --quaternary-color: #D2B4DE;
+    --background-color-light: #F5EEF8;
+    --sheet-border-color: #9B59B6;
+    --chapter-marker-color: #9B59B6;
+    --chapter-marker-top: 114mm; /* 85mm + 29mm */
+}
+
 
 /* 页面基础设置 */
 @page {
