--- a/engineering_notebook/assets/styles/style.css
+++ b/engineering_notebook/assets/styles/style.css
@@ -18,7 +18,7 @@
     --background-color-light: #e6f2ff;
     --sheet-border-color: #007acb;
     --chapter-marker-color: #005f9e;
-    --chapter-marker-top: 56mm;
+    --chapter-marker-top: 27mm;
 }
 
 .theme-orange {
@@ -56,6 +56,18 @@
     /* 85mm + 29mm */
 }
 
+.theme-purple-7 {
+    --primary-color: #8E44AD;
+    --secondary-color: #9B59B6;
+    --tertiary-color: #9B59B6;
+    --quaternary-color: #D2B4DE;
+    --background-color-light: #F5EEF8;
+    --sheet-border-color: #9B59B6;
+    --chapter-marker-color: #9B59B6;
+    --chapter-marker-top: 201mm;
+    /* 85mm + 29mm */
+}
+
 .theme-reddish-brown {
     /* The anchor color provided */
     --primary-color: #E74C3C;
@@ -80,25 +92,37 @@
 }
 
 .theme-cyan {
-    --primary-color: #00BCD4; /* Cyan */
-    --secondary-color: #00ACC1; /* Darker Cyan */
-    --tertiary-color: #4DD0E1; /* Lighter Cyan */
-    --quaternary-color: #B2EBF2; /* Very Light Cyan */
-    --background-color-light: #E0F7FA; /* Almost White Cyan */
+    --primary-color: #00ACC1;
+    /* Cyan */
+    --secondary-color: #00BCD4;
+    /* Darker Cyan */
+    --tertiary-color: #4DD0E1;
+    /* Lighter Cyan */
+    --quaternary-color: #B2EBF2;
+    /* Very Light Cyan */
+    --background-color-light: #E0F7FA;
+    /* Almost White Cyan */
     --sheet-border-color: #00BCD4;
     --chapter-marker-color: #00BCD4;
-    --chapter-marker-top: 172mm; /* 143mm + 29mm */
+    --chapter-marker-top: 172mm;
+    /* 143mm + 29mm */
 }
 
 .theme-teal {
-    --primary-color: #008080; /* Teal */
-    --secondary-color: #009688; /* Darker Teal */
-    --tertiary-color: #4DB6AC; /* Lighter Teal */
-    --quaternary-color: #B2DFDB; /* Very Light Teal */
-    --background-color-light: #E0F2F1; /* Almost White Teal */
+    --primary-color: #008080;
+    /* Teal */
+    --secondary-color: #009688;
+    /* Darker Teal */
+    --tertiary-color: #4DB6AC;
+    /* Lighter Teal */
+    --quaternary-color: #B2DFDB;
+    /* Very Light Teal */
+    --background-color-light: #E0F2F1;
+    /* Almost White Teal */
     --sheet-border-color: #008080;
     --chapter-marker-color: #008080;
-    --chapter-marker-top: 201mm; /* 172mm + 29mm */
+    --chapter-marker-top: 230mm;
+    /* 172mm + 29mm */
 }
 
 
