updated ch04 through ch08 again.

--- a/engineering_notebook/assets/styles/style.css
+++ b/engineering_notebook/assets/styles/style.css
@@ -453,6 +453,7 @@ body.hide-other-elements .footer {
         background-image: none !important;
     }
 
+    #navigation-menu,
     .page-number,
     .a4-height-indicator,
     #toggle-dark-text-btn,
